# geographiclib_data_catkin

./: CMakeLists.txt  README.md  package.xml
scripts/: geographiclib-get-geoids  geographiclib-get-gravity  geographiclib-get-magnetic
